--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body id="home">
     <!--tombol contac-->
     <a href="https://wa.me/082112908618">
-      <img src=".img/whatsup-logo1.png" alt="" width="150" height="150" class="fixed-bottom" />
+      <img src="img/whatsup-logo1.png" alt="" width="150" height="150" class="fixed-bottom" />
     </a>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm fixed-top">
@@ -46,13 +46,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="new/IMG_20220219_234455.jpg" class="d-block w-100" alt="1" />
+          <img src="img/1.jpg" class="d-block w-100" alt="1" />
         </div>
         <div class="carousel-item">
-          <img src="new/IMG_20220219_234518.jpg" class="d-block w-100" alt="2" />
+          <img src="img/2.jpg" class="d-block w-100" alt="2" />
         </div>
         <div class="carousel-item">
-          <img src="new/IMG_20220219_234606.jpg" class="d-block w-100" alt="3" />
+          <img src="img/3.jpg" class="d-block w-100" alt="3" />
         </div>
       </div>
     </div>
@@ -64,17 +64,17 @@
         <div class="col-10 info-panel" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="900">
           <div class="row">
             <div class="col-lg">
-              <img src="img/IMG_20220217_023605.jpg" alt="employe" class="float-left" data-aos="zoom-out-up" />
+              <img src="img/vision.jpg" alt="employe" class="float-left" data-aos="zoom-out-up" />
               <h4>visi cocoprime</h4>
               <p>menjadi Perusahaan agribisnis global yang unggul dan berdaya saing kelas duniaS</p>
             </div>
             <div class="col-lg">
-              <img src="img/IMG_20220217_023544.jpg" alt="hires" class="float-left" data-aos="zoom-out-up" />
+              <img src="img/mision.jpg" alt="hires" class="float-left" data-aos="zoom-out-up" />
               <h4>Misi cocoprime</h4>
               <p>Menjadi Perusahaan Agribisnis yang menyediakan hasil olahan kelapa dengan kualitas terbaik</p>
             </div>
             <div class="col-lg">
-              <img src="img/IMG_20220217_023557.jpg" alt="security" class="float-left" data-aos="zoom-out-up" />
+              <img src="img/moto.jpg" alt="security" class="float-left" data-aos="zoom-out-up" />
               <h4>Moto cocoprime</h4>
               <p>alam memberikan semua yang di butuhkan, maka dari itu hargailah alam</p>
             </div>
@@ -112,40 +112,29 @@
     <!-- My Business -->
 
     <section id="business">
-      <div id="carouselExampleCaptions carousel-transition-duration: 0.6s;" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators var myCarousel = document.querySelector('#myCarousel') var carousel = new bootstrap.Carousel(myCarousel, { interval: 2000, wrap: false })">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        </div>
+      <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="new/IMG_20220220_023048.jpg" class="d-block w-100" alt="1" />
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="img/11.jpg" class="d-block w-100" alt="11" />
           </div>
           <div class="carousel-item">
-            <img src="new/IMG_20220220_023508.jpg" class="d-block w-100" alt="2" />
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="img/22.jpg" class="d-block w-100" alt="22" />
           </div>
           <div class="carousel-item">
-            <img src="new/IMG_20220220_023658.jpg" class="d-block w-100" alt="3" />
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="img/33.jpg" class="d-block w-100" alt="33" />
           </div>
           <div class="carousel-item">
-            <img src="new/IMG_20220220_024737.jpg" class="d-block w-100" alt="4" />
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="img/44.jpg" class="d-block w-100" alt="44" />
           </div>
-
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
     <!-- akhir My Business -->
