mengubah nomor wa

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body id="home">
     <!--tombol contac-->
-    <a href="https://wa.me/082112908618">
-      <img src="img/whatsup-logo1.png" alt="" width="150" height="150" class="fixed-bottom" />
+    <a href="https://wa.me/+6281025432514">
+      <img src="img/whatsup-logo1.png" alt="" width="120" height="120" class="fixed-bottom" />
     </a>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm fixed-top">
