mengubah file index

--- a/index.html
+++ b/index.html
@@ -166,13 +166,7 @@
                 <img src="img/Dita Putri.jpg" alt="" class="img-fluid rounded-circle" />
                 <h1 style="font-size: larger">Dita</h1>
                 <p style="font-size: small">business devlopment</p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fab fa-instagram">@ditaputri</i>
-                    </a>
-                  </div>
-                </div>
+                <div class="d-flex flex-row justify-content-center"></div>
               </div>
             </div>
           </div>
@@ -198,13 +192,7 @@
                 <img src="img/IMG-20220129-WA0014.jpg" alt="" class="img-fluid rounded-circle" />
                 <h1 style="font-size: large">Hardian</h1>
                 <p style="font-size: small">HR/GA</p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fab fa-instagram">@Hardian</i>
-                    </a>
-                  </div>
-                </div>
+                <div class="d-flex flex-row justify-content-center"></div>
               </div>
             </div>
           </div>
@@ -214,13 +202,7 @@
                 <img src="img/IMG-20220129-WA0012.jpg" alt="" class="img-fluid rounded-circle" />
                 <h1 style="font-size: large">Imam</h1>
                 <p style="font-size: small">Marketing Digital</p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fab fa-instagram">@imamsandie</i>
-                    </a>
-                  </div>
-                </div>
+                <div class="d-flex flex-row justify-content-center"></div>
               </div>
             </div>
           </div>
@@ -230,13 +212,7 @@
                 <img src="img/IMG-20220204-WA0002.jpg" alt="" class="img-fluid rounded-circle" />
                 <h1 style="font-size: larger">Khairunissa</h1>
                 <p style="font-size: small">Administrator</p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fab fa-instagram">@Khairunissa</i>
-                    </a>
-                  </div>
-                </div>
+                <div class="d-flex flex-row justify-content-center"></div>
               </div>
             </div>
           </div>
