--- a/index.html
+++ b/index.html
@@ -176,13 +176,7 @@
                 <img src="img/IMG_20220217_014702.jpg" alt="" class="img-fluid rounded-circle" />
                 <h1 style="font-size: larger">Arief</h1>
                 <p style="font-size: small">Digital Support</p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fab fa-instagram">@Husnie_arief</i>
-                    </a>
-                  </div>
-                </div>
+                <div class="d-flex flex-row justify-content-center">git </div>
               </div>
             </div>
           </div>
