--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1.jpg" class="d-block w-100" alt="1" />
+          <img src="new/IMG_20220305_021518.jpg" class="d-block w-100" alt="1" />
         </div>
         <div class="carousel-item">
-          <img src="img/2.jpg" class="d-block w-100" alt="2" />
+          <img src="new/IMG_20220305_021320.jpg" class="d-block w-100" alt="2" />
         </div>
         <div class="carousel-item">
           <img src="img/3.jpg" class="d-block w-100" alt="3" />
@@ -128,16 +128,25 @@
       <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/11.jpg" class="d-block w-100" alt="11" />
+            <img src="new/1.jpg" class="d-block w-100" alt="11" />
           </div>
           <div class="carousel-item">
-            <img src="img/22.jpg" class="d-block w-100" alt="22" />
+            <img src="new/2.jpg" class="d-block w-100" alt="22" />
           </div>
           <div class="carousel-item">
-            <img src="img/33.jpg" class="d-block w-100" alt="33" />
+            <img src="new/3.jpg" class="d-block w-100" alt="33" />
           </div>
           <div class="carousel-item">
-            <img src="img/44.jpg" class="d-block w-100" alt="44" />
+            <img src="new/4.jpg" class="d-block w-100" alt="44" />
+          </div>
+          <div class="carousel-item">
+            <img src="new/5.jpg" class="d-block w-100" alt="44" />
+          </div>
+          <div class="carousel-item">
+            <img src="new/6.jpg" class="d-block w-100" alt="44" />
+          </div>
+          <div class="carousel-item">
+            <img src="new/7.jpg" class="d-block w-100" alt="44" />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
@@ -155,7 +164,7 @@
     <!-- flip card -->
     <section id="team">
       <h1 style="font-style: bold" class="text-center">OUR TEAM</h1>
-      <div class="container my-3 py-5 text-center">
+      <div class="container11 my-3 py-5 text-center">
         <div class="row">
           <div class="col"></div>
         </div>
@@ -164,7 +173,7 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/Dita Putri.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 style="font-size: larger">Dita</h1>
+                <h1 style="font-size: larger"><br />Dita</h1>
                 <p style="font-size: small">business devlopment</p>
                 <div class="d-flex flex-row justify-content-center"></div>
               </div>
@@ -174,7 +183,7 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/IMG_20220217_014702.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 style="font-size: larger">Arief</h1>
+                <h1 style="font-size: larger"><br />Arief</h1>
                 <p style="font-size: small">Digital Support</p>
                 <div class="d-flex flex-row justify-content-center"></div>
               </div>
@@ -184,7 +193,7 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/IMG-20220129-WA0014.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 style="font-size: large">Hardian</h1>
+                <h1 style="font-size: large"><br />Hardian</h1>
                 <p style="font-size: small">HR/GA</p>
                 <div class="d-flex flex-row justify-content-center"></div>
               </div>
@@ -193,18 +202,8 @@
           <div class="col-lg-2 col-md-6">
             <div class="card">
               <div class="card-body">
-                <img src="img/IMG-20220129-WA0012.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 style="font-size: large">Imam</h1>
-                <p style="font-size: small">Marketing Digital</p>
-                <div class="d-flex flex-row justify-content-center"></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6">
-            <div class="card">
-              <div class="card-body">
                 <img src="img/IMG-20220204-WA0002.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 style="font-size: larger">Khairunissa</h1>
+                <h1 style="font-size: larger"><br />Khairunissa</h1>
                 <p style="font-size: small">Administrator</p>
                 <div class="d-flex flex-row justify-content-center"></div>
               </div>
