--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="new/IMG_20220305_021518.jpg" class="d-block w-100" alt="1" />
+          <img src="img/IMG_20220305_021518.jpg" class="d-block w-100" alt="1" />
         </div>
         <div class="carousel-item">
-          <img src="new/IMG_20220305_021320.jpg" class="d-block w-100" alt="2" />
+          <img src="img/IMG_20220305_021320.jpg" class="d-block w-100" alt="2" />
         </div>
         <div class="carousel-item">
           <img src="img/3.jpg" class="d-block w-100" alt="3" />
@@ -128,25 +128,22 @@
       <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="new/1.jpg" class="d-block w-100" alt="11" />
+            <img src="img/1.jpg" class="d-block w-100" alt="11" />
           </div>
           <div class="carousel-item">
-            <img src="new/2.jpg" class="d-block w-100" alt="22" />
+            <img src="img/2.jpg" class="d-block w-100" alt="22" />
           </div>
           <div class="carousel-item">
-            <img src="new/3.jpg" class="d-block w-100" alt="33" />
+            <img src="img/4.jpg" class="d-block w-100" alt="44" />
           </div>
           <div class="carousel-item">
-            <img src="new/4.jpg" class="d-block w-100" alt="44" />
+            <img src="img/5.jpg" class="d-block w-100" alt="44" />
           </div>
           <div class="carousel-item">
-            <img src="new/5.jpg" class="d-block w-100" alt="44" />
+            <img src="img/6.jpg" class="d-block w-100" alt="44" />
           </div>
           <div class="carousel-item">
-            <img src="new/6.jpg" class="d-block w-100" alt="44" />
-          </div>
-          <div class="carousel-item">
-            <img src="new/7.jpg" class="d-block w-100" alt="44" />
+            <img src="img/7.jpg" class="d-block w-100" alt="44" />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
@@ -219,27 +216,21 @@
         <div class="row text-center text-md-left">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-info">Harapan kami</h5>
-            <p class="text-uppercase mb-4 font-weight-bold text-primary">kami selalu mengedepankan 3 hal: Kepercayaan,Kejujuran dan Profesionalisme, bersama kita membangun sebuah bisnis yang dapat berguna untuk alam/eco green</p>
+            <p class="text-uppercase mb-4 font-weight-bold text-primary">
+              kami selalu mengedepankan <br />
+              Kepercayaan,Kejujuran dan Profesionalisme<br />
+              bersama kita membangun sebuah bisnis yang dapat berguna untuk alam/eco green
+            </p>
           </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-info">Products</h5>
             <p>
-              <a class="text-white" style="text-decoration: none">Arang Briket kelapa</a>
+              <a class="text-secondary" style="text-transform: uppercase"
+                >Arang Briket kelapa<br />
+                Santan Kelapa<br />gula kelapa<br />minyak goreng kelapa<br />vco<br />kelapa parut<br />kopra</a
+              >
             </p>
-            <p>
-              <a class="text-white" style="text-decoration: none"> Minyak goreng Kelapa</a>
-            </p>
-            <p>
-              <a class="text-white" style="text-decoration: none"> VCO</a>
-            </p>
-            <p>
-              <a class="text-white" style="text-decoration: none"> kelapa parut </a>
-            </p>
-            <p>
-              <a class="text-white" style="text-decoration: none"> Gula Kelapa</a>
-            </p>
-            <a class="text-white" style="text-decoration: none"> Santan Kelapa </a>
           </div>
 
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
