--- a/index.html
+++ b/index.html
@@ -24,22 +24,21 @@
       <img src="img/whatsup-logo1.png" alt="" width="120" height="120" class="fixed-bottom" />
     </a>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg shadow-sm fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#"></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto border-warning">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            <a class="nav-link" href="#about">about</a>
-            <a class="nav-link" href="#business">My Business</a>
+          <div class="navbar-nav ml-auto">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">About us</a>
+            <a class="nav-link" href="#">My business</a>
           </div>
         </div>
       </div>
     </nav>
-
     <!-- akhir navbar -->
 
     <!-- slider -->
@@ -90,7 +89,7 @@
       <div class="row workingspace">
         <h3 class="section text-center" style="line-height: 4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">About Us</h3>
         <div class="col" data-aos="fade-down" data-aos-duration="1000">
-          <img src="img/IMG_20220208_092626.jpg" alt="workingspace" class="img-fluid" />
+          <img src="img/IMG_20220312_022349.jpg" alt="workingspace" class="img-fluid" />
           <h3><span>Tentang Kami</span></h3>
           <p>
             Perusahaan pengelola bisnis yang bergerak pada sektor pertanian komoditas kelapa beserta turunannya yang berkualitas terbaik, hal ini di karenakan kami memakai bahan baku yang berasal langsung dari perkebunan kelapa dan di
@@ -112,15 +111,43 @@
                 <li class="list-inline-item">
                   <a href="https://instagram.com/cocoprimee?utm_mediium=copy_link" class="btn-floating btn-sm text-black-50" style="font-size: 23px"><i class="fab fa-instagram"></i> </a>
                 </li>
+                <li class="list-inline-item">
+                  <a href="#" class="btn-floating btn-sm text-black-50" style="font-size: 23px"><i class="fab fa-linkedin"></i> </a>
+                </li>
               </ul>
             </div>
           </div>
-
-          <img src="img/IMG_20220208_092719.jpg" alt="working" class="img-fluid" />
+          <img src="img/IMG_20220312_022331.jpg" alt="working" class="img-fluid" />
         </div>
       </div>
     </section>
     <!-- akhir workingspace -->
+
+    <!-- workingspace -->
+
+    <section id="">
+      <div class="row workingspace">
+        <h3 class="section text-center" style="line-height: 4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"></h3>
+        <div class="col" data-aos="flip-left" data-aos-duration="1000">
+          <img src="img/IMG_20220312_022818.jpg" alt="workingspace" class="img-fluid" />
+          <h3><span>WWW.COCO-PRIME.COM</span></h3>
+        </div>
+        <div class="col" data-aos="flip-right" data-aos-duration="1000">
+          <div class="col-md-6 col-lg-5">
+            <div class="text-center text-md-right"></div>
+          </div>
+          <img src="img/IMG_20220312_022408.jpg" alt="working" class="img-fluid" />
+          <h3><span>WWW.COCO-PRIME.COM</span></h3>
+        </div>
+      </div>
+    </section>
+    <!-- akhir workingspace -->
+
+    <!--card-->
+    <div class="card bg-dark text-white" data-aos="flip-right" data-aos-duration="1000">
+      <img src="img/IMG_20220312_022427.jpg" class="card-img" alt="..." />
+      <div class="card-img-overlay"></div>
+    </div>
 
     <!-- My Business -->
 
@@ -167,9 +194,6 @@
     <!-- akhir My Business -->
 
     <!-- flip card -->
-    <header class="text-center py-5">
-      <div class="container"></div>
-    </header>
 
     <!-- footer -->
     <footer class="bg-dark text-white pt-5 pb-4">
