--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <img src="img/whatsup-logo1.png" alt="" width="120" height="120" class="fixed-bottom" />
     </a>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">PT.Fauzi Global Prime</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About us</a>
-            <a class="nav-link" href="#">My business</a>
+            <a class="nav-link" href="#about">About us</a>
+            <a class="nav-link" href="#business">My business</a>
           </div>
         </div>
       </div>
@@ -89,6 +89,7 @@
       <div class="row workingspace">
         <h3 class="section text-center" style="line-height: 4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">About Us</h3>
         <div class="col" data-aos="fade-down" data-aos-duration="1000">
+          <br />
           <img src="img/IMG_20220312_022349.jpg" alt="workingspace" class="img-fluid" />
           <h3><span>Tentang Kami</span></h3>
           <p>
@@ -96,6 +97,7 @@
             kelola dengan baik serta fokus pada pemberdayaan petani lokal, kami yang bergerak secara team akan layanan serta kualitas produk yang terbaik
           </p>
         </div>
+
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <h3><span>COCO PRIME</span></h3>
           <p>
@@ -117,38 +119,43 @@
               </ul>
             </div>
           </div>
+          <br />
+          <br />
           <img src="img/IMG_20220312_022331.jpg" alt="working" class="img-fluid" />
         </div>
       </div>
     </section>
     <!-- akhir workingspace -->
 
-    <!-- workingspace -->
-
-    <section id="">
-      <div class="row workingspace">
-        <h3 class="section text-center" style="line-height: 4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"></h3>
-        <div class="col" data-aos="flip-left" data-aos-duration="1000">
-          <img src="img/IMG_20220312_022818.jpg" alt="workingspace" class="img-fluid" />
-          <h3><span>WWW.COCO-PRIME.COM</span></h3>
-        </div>
-        <div class="col" data-aos="flip-right" data-aos-duration="1000">
-          <div class="col-md-6 col-lg-5">
-            <div class="text-center text-md-right"></div>
-          </div>
-          <img src="img/IMG_20220312_022408.jpg" alt="working" class="img-fluid" />
-          <h3><span>WWW.COCO-PRIME.COM</span></h3>
-        </div>
-      </div>
-    </section>
-    <!-- akhir workingspace -->
-
     <!--card-->
+    <br />
+    <br />
     <div class="card bg-dark text-white" data-aos="flip-right" data-aos-duration="1000">
-      <img src="img/IMG_20220312_022427.jpg" class="card-img" alt="..." />
+      <img src="img/IMG_20220312_022427.jpg" class="img-fluid" alt="..." />
       <div class="card-img-overlay"></div>
     </div>
-
+    <br />
+    <br />
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/IMG_20220312_022711.jpg" class="img-fluid" alt="..." />
+          <div class="card-body"></div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/IMG_20220312_022408.jpg" class="img-fluid" alt="..." />
+          <div class="card-body"></div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="img/IMG_20220312_022818.jpg" class="img-fluid" alt="..." />
+          <div class="card-body"></div>
+        </div>
+      </div>
+    </div>
     <!-- My Business -->
 
     <section id="business">
@@ -192,8 +199,8 @@
       </div>
     </section>
     <!-- akhir My Business -->
-
-    <!-- flip card -->
+    <br />
+    <!-- team -->
 
     <!-- footer -->
     <footer class="bg-dark text-white pt-5 pb-4">
