--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#about">About us</a>
             <a class="nav-link" href="#business">My business</a>
+            <a class="nav-link" href="team.html">My Team</a>
           </div>
         </div>
       </div>
